<?xml version="1.0" encoding="utf-8"?>



<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3D3D3">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rectangle"
        tools:context="com.example.shoppinglist.Fragments.item.ItemFragment">


        <FrameLayout
            android:id="@+id/frameLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Item_price_TV">

            <ImageView
                android:id="@+id/Item_img"
                android:layout_width="320dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/Item_img"
                android:src="@drawable/img" />
        </FrameLayout>

        <TextView
            android:id="@+id/Item_name_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mont"
            android:paddingTop="40dp"
            android:paddingBottom="40dp"
            android:text="@string/item_name"
            android:textColor="#000"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/Item_wtb_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp"
            android:layout_marginTop="20dp"
            android:text="@string/where_to_buy"
            android:textColor="#000"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Item_name_TV" />


        <TextView
            android:id="@+id/Item_shop_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/item_shop"
            app:layout_constraintStart_toStartOf="@+id/Item_wtb_TV"
            app:layout_constraintTop_toBottomOf="@+id/Item_wtb_TV" />

        <TextView
            android:id="@+id/amount_item_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Item_shop_TV" />

        <TextView
            android:id="@+id/Item_amount_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amount_item_TV"
          />

        <TextView
            android:id="@+id/txtViewPriceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/item_price"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Item_amount_TV" />

        <TextView
            android:id="@+id/Item_price_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/item_price"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/txtViewPriceTitle"
            app:layout_constraintTop_toBottomOf="@+id/txtViewPriceTitle" />


        <TextView
            android:id="@+id/Item_currency_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_currency"
            android:layout_marginLeft="5dp"
            android:textColor="#000"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/Item_price_TV"
            app:layout_constraintStart_toEndOf="@+id/Item_price_TV" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
