<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rowLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?selectableItemBackground"
    android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/Show_data_img"
                    android:layout_width="200dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/img_show_list"
                    app:srcCompat="@drawable/img" />

            </FrameLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/edit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                app:backgroundTint="@android:color/transparent"
                app:borderWidth="0dp"
                app:elevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_edit"
                android:contentDescription="@string/edit_btn"
                android:focusable="true" />

            <TextView
                android:id="@+id/name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="12"
                android:text="@string/item_name_list"
                android:textSize="22sp"
                android:paddingLeft="20dp"
                android:textStyle="bold"
                android:textColor="#000"
                android:layout_marginStart="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/frameLayout"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/amount_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="12"
                android:text="@string/amount"
                android:layout_marginTop="60dp"
                android:textSize="16sp"
                android:paddingLeft="20dp"
                android:textStyle="bold"
                android:textColor="#000"
                android:layout_marginStart="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/frameLayout"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/amount_pcs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_amount_list"
                android:textColor="#000"
                android:layout_marginLeft="5dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/amount_txt"
                app:layout_constraintStart_toEndOf="@+id/amount_txt" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>