<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    tools:context="com.example.shoppinglist.Fragments.list.ListFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/delete_all_btn"
            android:layout_width="40dp"
            android:layout_height="43dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="340dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/delete_all"
            android:tint="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_delete" />

        <ImageButton
            android:id="@+id/add_img_btn"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/add_btn"
            android:tint="#9CCC65"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_headline_TV" />

    <TextView
        android:id="@+id/list_headline_TV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/top"
        android:fontFamily="@font/mont"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/shopping_list"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <ImageButton
        android:id="@+id/img_share_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="340dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/share_btn"
        android:tint="#fff"
        app:layout_constraintLeft_toLeftOf="@id/list_headline_TV"
        app:srcCompat="@drawable/ic_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <ImageButton
        android:id="@+id/img_setting_btn"
        android:layout_width="54dp"
        android:layout_height="53dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/share_btn"
        android:tint="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_settings" />


</androidx.constraintlayout.widget.ConstraintLayout>